--- a/.github/workflows/main_nhuttu-python.yml
+++ b/.github/workflows/main_nhuttu-python.yml
@@ -33,7 +33,8 @@ jobs:
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip . -x "*/__pycache__/*" "*/.venv/*" "*/.git/*"
+        run: zip -r release.zip . -x "*/__pycache__/*" "*/.venv/*" "*/.git/*" "*/node_modules/*"
+
 
 
       - name: Upload artifact for deployment jobs
